--- a/src/app/root/header/header.component.scss
+++ b/src/app/root/header/header.component.scss
@@ -2,7 +2,75 @@
 @import "common";
 
 header{
+  .menu {
+    position: relative;
+    display:  inline-block;
+    width: 30px;
+    height: 30px;
+    margin: 25px;
+    span {
+      margin: 0 auto;
+      position: relative;
+      top: 12px;
+      -webkit-transition-duration: 0s; transition-duration: 0s;
+      -webkit-transition-delay: 0.2s; transition-delay: 0.2s;
+      &:before,
+      &:after {
+        position: absolute;
+        content: '';
+      }
+      &:before {
+        -webkit-transition-property: margin, -webkit-transform; transition-property: margin, transform;
+        -webkit-transition-duration: 0.2s; transition-duration: 0.2s;
+        -webkit-transition-delay: 0.2s, 0s; transition-delay: 0.2s, 0s;
+      }
+      &:after {
+        -webkit-transition-property: margin, -webkit-transform; transition-property: margin, transform;
+        -webkit-transition-duration: 0.2s; transition-duration: 0.2s;
+        -webkit-transition-delay: 0.2s, 0s; transition-delay: 0.2s, 0s;
+      }
+    }
+    span,
+    span:before,
+    span:after {
+      width: 30px;
+      height: 6px;
+      background-color: #000;
+      display: block;
+    }
+    span:before {
+      margin-top: -12px;
+    }
+    span:after {
+      margin-top: 12px;
+    }
+
+    &.active {
+      span {
+        background-color: rgba(0,0,0,0.0);
+        -webkit-transition-delay: 0.2s; transition-delay: 0.2s;
+        &:after {
+          margin-top: 0;
+          -webkit-transform: rotate(-45deg); transform: rotate(-45deg);
+          -webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;
+        }
+        &:before {
+          margin-top: 0;
+          -webkit-transform: rotate(45deg); transform: rotate(45deg);
+          -webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;
+        }
+      }
+    }
+  }
+
+  .logo{
+    img{
+      height: 50px;
+      width: auto;
+    }
+  }
   .nav-item{
+
     cursor: pointer;
     &.active{
       outline: none !important;
@@ -10,4 +78,27 @@ header{
   }
 
 }
+@media (max-width: 991px){
+  header{
+    .navbar-collapse{
+      display: inline-block !important;
+      height: 0;
+      opacity: 0;
+      -moz-transition: height 0.1s ease-in-out;
+      -o-transition: height 0.1s ease-in-out;
+      -webkit-transition: height 0.1s ease-in-out;
+      transition: height 0.1s ease-in-out;
+      &.collapse{
+        opacity: 1;
+        height: 200px;
+      }
+    }
+  }
+}
+@media (min-width: 992px){
+
+    .menu {
+      display: none !important;
+    }
+  }
 
