--- a/src/app/root/header/header.component.html
+++ b/src/app/root/header/header.component.html
@@ -1,18 +1,19 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">test</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="menu"(click)="callapse = !callapse" [ngClass]="{'active': !callapse}">
+      <span></span>
+    </a>
+    <a class="navbar-brand logo" routerLink="/">
+      <img src="assets/images/logo.png"/>
+    </a>
+    <div class=" navbar-collapse" id="navbarNav" [ngClass]="{'collapse': !callapse}">
       <ul class="navbar-nav">
-        <li class="nav-item" routerLink="/" routerLinkActive="active">
+        <li class="nav-item" routerLink="" routerLinkActive="active" (click)="callapse = !callapse">
           <a class="nav-link">Home</a>
         </li>
-        <li class="nav-item" routerLink="/imprint" routerLinkActive="active">
+        <li class="nav-item" routerLink="/imprint" routerLinkActive="active" (click)="callapse = !callapse">
           <a class="nav-link">imprint</a>
         </li>
-
       </ul>
     </div>
   </nav>
