--- a/src/app/root/header/header.component.html
+++ b/src/app/root/header/header.component.html
@@ -1,20 +1,26 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="menu"(click)="callapse = !callapse" [ngClass]="{'active': !callapse}">
-      <span></span>
-    </a>
-    <a class="navbar-brand logo" routerLink="/">
-      <img src="assets/images/logo.png"/>
-    </a>
-    <div class=" navbar-collapse" id="navbarNav" [ngClass]="{'collapse': !callapse}">
-      <ul class="navbar-nav">
-        <li class="nav-item" routerLink="" routerLinkActive="active" (click)="callapse = !callapse">
-          <a class="nav-link">Home</a>
-        </li>
-        <li class="nav-item" routerLink="/imprint" routerLinkActive="active" (click)="callapse = !callapse">
-          <a class="nav-link">imprint</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <a class="navbar-brand logo pull-right" routerLink="/">
+    <img src="assets/images/logo.png"/>
+  </a>
+  <div class="nav-button" (mousemove)='hoverdiv($event)' (mouseleave)="resetdiv( )" (click)="callapse = !callapse" >
+    <span class="menu-btn_circle" ratio="1" scale="0.5" [style]="menueStyle()">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" xml:space="preserve">
+        <circle fill="none" stroke-width="1" stroke-miterlimit="10" cx="25" cy="25" r="23.8"></circle>
+      </svg>
+    </span>
+    <span class="menu-btn_text" ratio="0.5" scale="0" [style]="textStyle()"><span *ngIf="!callapse" >MENU</span><span *ngIf="callapse" >CLOSE</span></span>
+  </div>
+  <div>
+    <ul class="menu-list" [ngClass]="{'is-active': callapse}">
+      <li class="menu-list-item" routerLink="" routerLinkActive="active" (click)="callapse = !callapse" >
+        <a class="menu-list-link"><h2>Home</h2></a>
+      </li>
+      <li class="menu-list-item" routerLink="/imprint" routerLinkActive="active" (click)="callapse = !callapse" >
+        <a class="menu-list-link"><h2>imprint</h2></a>
+      </li>
+    </ul>
+  </div>
+  <div class="menu-wrapper" [ngClass]="{'is-active': callapse}">
+    <div class="bg-image"></div>
+  </div>
 </header>
