--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab');
+@import url('https://fonts.googleapis.com/css?family=Cairo:300,400,600,700|Open+Sans:300,400,700');
+
+$font-family-base: 'Open Sans', sans-serif;
+$font-family-slap: 'Cairo', serif;
 body{
   background-image: url(/assets/images/Chalkboard-background.jpg);
   font-size: 16px;
-  color: #0e0e0e;
+  color: #4b4c46;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-family-base;
   h1,h2,h3,h4,h5,h6{
-    font-family: 'Roboto Slab', serif;
-    text-shadow: 2px 2px 2px #ffffff;
+    font-family: $font-family-slap;
   }
   &:before,
   &:after{
@@ -29,5 +31,7 @@ body{
     bottom: 0;
     transform: translateY(100%);
   }
-
+}
+*:focus {
+  outline: none;
 }
