--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,15 @@
+<div class="wrapper">
+  <h1>Impressum</h1>
 
-<h1>Impressum</h1>
+  <div class="content-middle">
+    <p>
+      Andreas Lottes<br>
+      Rehbachstraße 95<br>
+      66125 Saarbrücken<br>
+    </p>
+    <p>
+      netzwerkwelten @ gmail .com
+    </p>
+  </div>
 
-<p>
-  Imprint goes here
-</p>
+</div>
