--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
-<h1>Welcome to the page</h1>
-<p>
-  home works!
-</p>
+
+<div class="wrapper">
+  <h1>Welcome to the page</h1>
+  <div class="content-middle">
+    Home goes here
+  </div>
+</div>
+
