--- a/src/app/root/header/header.component.scss
+++ b/src/app/root/header/header.component.scss
@@ -28,13 +28,14 @@ header{
     cursor: pointer;
     .menu-btn_text{
       font-family: $font-family-slap;
-      letter-spacing: .7em;
+      letter-spacing: .2em;
       font-size: 0.75em;
+      font-weight: 600;
       top: 26px;
       left: 30px;
       position: absolute;
       display: inline-block;
-      color:grey;
+      color:$light-color;
       -webkit-transition: all 0.1s ease-in-out;
       -moz-transition: all 0.1s ease-in-out;
       -o-transition: all 0.1s ease-in-out;
@@ -43,7 +44,7 @@ header{
     }
     .menu-btn_circle{
       svg {
-        stroke: grey;
+        stroke: $light-color;
         display: inline-block;
         width: 50px;
         height: 50px;
@@ -54,7 +55,7 @@ header{
       }
       position: absolute;
       display: inline-block;
-      color:grey;
+      color:$light-color;
       top: 10px;
       left: 10px;
       -webkit-transition: all 0.1s ease-in-out;
@@ -90,8 +91,8 @@ header{
     bottom: 0px;
     width: 100vh;
     height: 100vh;
+    z-index: 900;
     .bg-image{
-      z-index: 900;
       position: absolute;
       width: 100vw;
       height: 100vh;
@@ -99,6 +100,9 @@ header{
       bottom: 0px;
       background-image: url(/assets/images/menu-texture-1920.jpg);
       background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-color: #fff;
       opacity: .95;
     }
 
@@ -128,8 +132,8 @@ header{
     }
     li{
       h2{
-        color: #f9f4ea;
-        font-size: 6vw !important;
+        color: #858c90;
+        font-size: 4vw !important;
         line-height: 10vw;
       }
       text-align: center;
@@ -154,6 +158,56 @@ header{
       width: 10vh;
       height: 8vh;
     }
+    .menu-list{
+      li{
+        h2{
+          font-size: 6.5vw !important;
+        }
+      }
+    }
   }
 }
 
+/* Header */
+.large-header {
+  position: relative;
+  width: 100%;
+  background: #333;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center center;
+  z-index: 1;
+}
+
+#large-header {
+  background-image: url('http://cdn.paper4pc.com/images/blue-space-wallpaper-4.jpg');
+}
+
+.main-title {
+  position: absolute;
+  margin: 0;
+  font-size: 50px;
+  padding: 0;
+  color: #f9f1e9;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%,-50%,0);
+  transform: translate3d(-50%,-50%,0);
+}
+
+.demo-1 .main-title {
+  text-transform: uppercase;
+  font-size: 4.2em;
+  letter-spacing: 0.1em;
+}
+
+.main-title .thin {
+  font-weight: 200;
+}
+
+@media only screen and (max-width : 768px) {
+  .demo-1 .main-title {
+    font-size: 3em;
+  }
+}
