--- a/src/app/root/root.component.scss
+++ b/src/app/root/root.component.scss
@@ -27,6 +27,7 @@
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  z-index: 100;
   .-content{
     position: relative;
     height: 100vh;
@@ -48,4 +49,5 @@
       }
     }
   }
+
 }
