--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,15 +1,38 @@
-@import url('https://fonts.googleapis.com/css?family=Cairo:300,400,600,700|Open+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-$font-family-base: 'Open Sans', sans-serif;
-$font-family-slap: 'Cairo', serif;
+$font-family-base: 'Montserrat', sans-serif;
+$font-family-slap: 'Montserrat', serif;
+
+$font-color: #010101;
+$light-color: #858c90;
+
 body{
-  background-image: url(/assets/images/Chalkboard-background.jpg);
+  background:#fefefe;
   font-size: 16px;
-  color: #4b4c46;
+  color: $font-color;
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-base;
   h1,h2,h3,h4,h5,h6{
     font-family: $font-family-slap;
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+  h1{
+    &:before{
+      background: $font-color;
+      color: #fff;
+      font-size: 0.5em;
+      position: relative;
+      font-weight: 900;
+      top: -7px;
+      /* left: 15px; */
+      /* border: 2px solid #010101; */
+      margin: 0px 2px;
+      padding: 3px 10px;
+      font-family: "Montserrat", sans-serif;
+      content: 'LOTTES';
+      opacity: 0.1;
+    }
   }
   &:before,
   &:after{
@@ -30,6 +53,26 @@ body{
   &:after{
     bottom: 0;
     transform: translateY(100%);
+  }
+  .wrapper{
+    width: 100vw;
+    text-align: center;
+    .content-middle {
+      background: #fff;
+      border: 1px solid #eaeaea;
+      padding: 2em 3em 2em 3em;
+      margin: 3em auto;
+      color: #000;
+      line-height: 1.7em;
+      width: 80%;
+      max-width: 1200px;
+      h3{
+        font-size: 1.6em;
+        font-weight: 900;
+        letter-spacing: 2px;
+        margin-bottom: 1.2em;
+      }
+    }
   }
 }
 *:focus {
