--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,7 +7,12 @@ $font-color: #010101;
 $light-color: #858c90;
 
 body{
-  background:#fefefe;
+  //background-image: url(/assets/images/page_bg.png);
+  //background-size: cover;
+  //background-repeat: no-repeat;
+  //background-position: center;
+  background-color: #f3f3f3;
+  height: 100vh;
   font-size: 16px;
   color: $font-color;
   -webkit-font-smoothing: antialiased;
@@ -19,19 +24,23 @@ body{
   }
   h1{
     &:before{
-      background: $font-color;
+      background: #010101;
       color: #fff;
-      font-size: 0.5em;
+      font-size: 0.3em;
       position: relative;
       font-weight: 900;
-      top: -7px;
-      /* left: 15px; */
-      /* border: 2px solid #010101; */
-      margin: 0px 2px;
-      padding: 3px 10px;
+      top: -29px;
+      left: 25px;
+      padding: 3px 5px;
       font-family: "Montserrat", sans-serif;
       content: 'LOTTES';
-      opacity: 0.1;
+      opacity: 0.15;
+      -webkit-transform: rotate(-8deg);
+      -moz-transform: rotate(-8deg);
+      -o-transform: rotate(-8deg);
+      -ms-transform: rotate(-8deg);
+      transform: rotate(-8deg);
+      display: inline-block;
     }
   }
   &:before,
