--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,11 +7,11 @@ $font-color: #010101;
 $light-color: #858c90;
 
 body{
-  //background-image: url(/assets/images/page_bg.png);
-  //background-size: cover;
-  //background-repeat: no-repeat;
-  //background-position: center;
-  background-color: #f3f3f3;
+  background-image: url(/assets/images/page_bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #fff;
   height: 100vh;
   font-size: 16px;
   color: $font-color;
