--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -3,5 +3,8 @@
 
 <div class="container-fluid {{animation}}">
     <router-outlet></router-outlet>
+    <div class="wrap">
+        <div id="bg" #bg></div>
+    </div>
 </div>
 
