--- a/src/app/root/root.component.scss
+++ b/src/app/root/root.component.scss
@@ -49,5 +49,29 @@
       }
     }
   }
+  .wrap{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    z-index: -5;
+  }
+  #bg{
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    background: radial-gradient(#e0dacd, #b59b63);
+    background-size: cover;
+    overflow: hidden;
+    transform: scale(1.1);
+  }
 
 }
