--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:800');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:800|Lato:100,300,600,800');
 
-$font-family-base: 'Open Sans', sans-serif;
+$font-family-base: 'Lato', sans-serif;
 $font-family-slap: 'Open Sans', serif;
 
 $title-color: #f1f1f1;
