--- a/src/app/root/footer/footer.component.html
+++ b/src/app/root/footer/footer.component.html
@@ -1,3 +1,8 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="footer-wrapper">
+    <ul>
+      <li>Design und Entwicklung von Andreas Lottes</li>
+      <li><b routerLink="/imprint">Kontakt & Impressum</b></li>
+    </ul>
+  </div>
+</footer>
