--- a/src/app/root/header/header.component.html
+++ b/src/app/root/header/header.component.html
@@ -3,7 +3,7 @@
     <!--<img src="assets/images/logo.png"/>-->
   <!--</a>-->
 
-  <div class="nav-button" (mousemove)='hoverdiv($event)' (mouseleave)="resetdiv( )" (click)="callapse = !callapse" >
+  <div class="nav-button" (mousemove)='hoverdiv($event)' (mouseleave)="resetdiv( )" (click)="openNav()" >
     <span class="menu-btn_circle" ratio="1" scale="0.5" [style]="menueStyle()">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" xml:space="preserve">
         <circle fill="none" stroke-width="1" stroke-miterlimit="10" cx="25" cy="25" r="23.8"></circle>
