--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -1,11 +1,8 @@
-
+<app-intro></app-intro>
 <app-header></app-header>
 
 <div class="container-fluid {{animation}}">
     <router-outlet></router-outlet>
-    <div class="wrap">
-        <div id="bg" #bg></div>
-    </div>
 </div>
 
-
+<app-footer></app-footer>
