--- a/src/app/root/intro/intro.component.html
+++ b/src/app/root/intro/intro.component.html
@@ -1,4 +1,9 @@
-<div class="intro">
+<div class="intro" >
+
+    <div class="speed" (click)="fastenUp()">
+       fast forward <i class="fa fa-step-forward"></i>
+    </div>
+
     <div class="load">
         <i class="fa fa-spinner fa-pulse fa-3x fa-fw"> </i>
         <div class="quote"></div>
