--- a/src/app/root/intro/intro.component.scss
+++ b/src/app/root/intro/intro.component.scss
@@ -240,7 +240,7 @@
       }
     }
     .more {
-      color: #666;
+      color: #fefefe;
       font-weight: bold;
       text-transform: uppercase;
       white-space: nowrap;
@@ -249,7 +249,6 @@
         position: relative;
         top: -10px;
         margin-right: 5px;
-        color: #999;
         vertical-align: middle;
       }
     }
@@ -298,6 +297,27 @@
       display: inline-block;
     }
 
+  }
+  .speed{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0px auto;
+    padding: 25px;
+    text-align: center;
+    z-index: 1002;
+    font-weight: 800;
+    cursor: pointer;
+    line-height: 25px;
+    i{
+      margin-left: 10px;
+      border: 1px solid #fefefe;
+      border-radius: 50%;
+      padding-top: 5px;
+      width: 25px;
+      height: 25px;
+    }
   }
 
 }
