--- a/src/app/root/header/header.component.scss
+++ b/src/app/root/header/header.component.scss
@@ -102,7 +102,8 @@ header {
       }
 
       #large-header {
-        background-image: url(/assets/images/navigation_bg.png);
+        background-image: url(/assets/images/IMG_20170613_141038-01.jpeg);
+        background-size: cover;
         opacity: 0.25;
       }
     }
