--- a/src/app/root/intro/intro.component.html
+++ b/src/app/root/intro/intro.component.html
@@ -1,80 +1,80 @@
-<div class="intro" >
+<div class="intro">
 
-    <div class="speed" (click)="fastenUp()">
-       fast forward <i class="fa fa-step-forward"></i>
+  <div class="speed" (click)="fastenUp()">
+    fast forward <i class="fa fa-step-forward"></i>
+  </div>
+
+  <div class="load">
+    <i class="fa fa-cog fa-spin fa-3x fa-fw"> </i>
+    <div class="quote"></div>
+  </div>
+
+
+  <div class="browser-wrap browser-height">
+
+    <div class="text aboutText">
+      <div class="text-design">Loading Design</div>
+      <div class="text-develop">Loading Content</div>
     </div>
 
-    <div class="load">
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"> </i>
-        <div class="quote"></div>
+    <div class="aboutAni">
+      <div class="design">
+        <div class="head"></div>
+        <div class="box-contain">
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+        </div>
+      </div>
+      <div class="develop">
+        <div class="sidebar"></div>
+        <div class="codebar">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+          <br>
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+          <br>
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+      </div>
     </div>
 
+    <div class="text">
+      <div class="text-screen">Loading responsive settings</div>
+      <div class="more"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></div>
+    </div>
 
-    <div class="browser-wrap browser-height">
+    <div class="browser">
+      <div class="icon">
+        <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
+      </div>
 
-        <div class="text aboutText">
-            <div class="text-design">Loading Design</div>
-            <div class="text-develop">Loading Content</div>
-        </div>
-
-        <div class="aboutAni">
-            <div class="design">
-                <div class="head"></div>
-                <div class="box-contain">
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box box-large"></div>
-                </div>
-            </div>
-            <div class="develop">
-                <div class="sidebar"></div>
-                <div class="codebar">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <br>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <br>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="text">
-            <div class="text-screen">Loading responsive settings</div>
-            <div class="text-web">Loading experiences.</div>
-            <div class="more"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i> <span>Loading Website</span></div>
-        </div>
-
-        <div class="browser">
-            <div class="icon">
-                <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
-            </div>
-
-            <div class="header">
-                <span class="back fa fa-circle"></span>
-                <span class="right">
+      <div class="header">
+        <span class="back fa fa-circle"></span>
+        <span class="right">
           <span class="fa fa-circle"></span>
       <span class="fa fa-circle"></span>
       <span class="fa fa-circle"></span>
       </span>
-            </div>
-            <div class="body">
+      </div>
+      <div class="body">
 
-            </div>
+      </div>
 
-            <div class="tablet"><span class="ion-30 ion-ios-circle-filled"></span></div>
-            <div class="phone"></div>
-        </div>
+      <div class="tablet"></div>
+      <div class="phone"></div>
     </div>
+  </div>
 
 </div>
