--- a/src/app/root/intro/intro.component.scss
+++ b/src/app/root/intro/intro.component.scss
@@ -5,6 +5,7 @@
   height: 100vh;
   position: fixed;
   background-image: radial-gradient(circle farthest-corner at center, #3c4b57 0%, #1c262b 100%);
+
   z-index: 1002;
   .load {
     z-index: 1;
@@ -87,8 +88,9 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-image: radial-gradient(circle farthest-corner at center, #3c4b57 0%, #1c262b 100%);
-
+    //background-image: radial-gradient(circle farthest-corner at center, #3c4b57 0%, #1c262b 100%);
+    background-image: url(/assets/images/IMG_20170613_141038-01.jpeg);
+    background-size: cover;
     .browser {
       display: inline-block;
       position: absolute;
@@ -105,9 +107,9 @@
       -moz-border-radius: 5px;
       -webkit-border-radius: 5px;
       border-radius: 5px;
-      -moz-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.5);
-      -webkit-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.5);
-      box-shadow: 0 2px 5px rgba(34, 34, 34, 0.5);
+      -moz-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.2);
+      -webkit-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.2);
+      box-shadow: 0 2px 5px rgba(34, 34, 34, 0.2);
       .icon {
         display: table;
         width: 100%;
@@ -171,9 +173,9 @@
       -moz-border-radius: 5px;
       -webkit-border-radius: 5px;
       border-radius: 5px;
-      -moz-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.5);
-      -webkit-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.5);
-      box-shadow: 0 2px 5px rgba(34, 34, 34, 0.5);
+      -moz-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.2);
+      -webkit-box-shadow: 0 2px 5px rgba(34, 34, 34, 0.2);
+      box-shadow: 0 2px 5px rgba(34, 34, 34, 0.2);
     }
 
     .design {
